Fixed issue when there is not TOP_NS

--- a/sample_params_file.cfg
+++ b/sample_params_file.cfg
@@ -1,12 +1,16 @@
 ### Shell Style Variables
 ## Variables accepted:
-## 
+##
 ## sample: ${variable}
 ## sample: $variable
 ##
 ## Concatenation supported
 ## VAR="${SAMPLE}-text"
+##
+## TOP_NS is the most basic namespace that you will have
+## if you dont set at parameters file, the script will take / as top namespace
 
+TOP_NS='SAMPLE'
 DOMAIN="example.com"
 PUBLIC_DOMAIN="public.example.com"
 PROXY="22.75.135.87:80"
